// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryContainer /> should render a couple of posts 1`] = `
<div>
  <article>
    <h4>
      <a
        href="/hello-world"
        onClick={[Function]}
      >
        Hello world!
      </a>
    </h4>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
",
        }
      }
    />
  </article>
  <article>
    <h4>
      <a
        href="/tiled-gallery"
        onClick={[Function]}
      >
        Tiled Gallery
      </a>
    </h4>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>tiled galley content</p>",
        }
      }
    />
  </article>
  <br />
  <div />
</div>
`;

exports[`should render a post 1`] = `
<article>
  <h4>
    <a
      href="/hello-world"
      onClick={[Function]}
    >
      Hello world!
    </a>
  </h4>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
",
      }
    }
  />
</article>
`;
